# Migao

./: README.md  final_review_gate.py  pyproject.toml
src/: __init__.py  main.py  settings.py
src/audio/: __init__.py  audio_manager.py
src/dda/: __init__.py  dda_controller.py
src/domain/: __init__.py  difficulty.py  models.py  ports.py
src/engine/: components.py  game_engine.py  note_spawner.py
src/telemetry/: emotion_engine.py
src/ui/: __init__.py  screens.py  widgets.py
tests/: test_dda_controller.py  test_difficulty.py  test_emotion_engine.py
